--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <a href="https://www.facebook.com/bappaguddu.das" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
                     <a href="https://www.instagram.com/bappa98/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#" target="_blank"><i class="fa-brands fa-whatsapp"></i></a>
-                    <a href="https://www.linkedin.com/in/bappadas0/"><i class="fa-brands fa-linkedin-in"></i></a>
+                    <a href="https://www.linkedin.com/in/bappadas0/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a>
                     
                 </div>
 
