--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
     <div class="clr"></div>
     <section id="resume">
        <div class="preview"><img src="./images/BAPPA DAS CV.jpg" alt=""></div> 
-       <div class="downcv"><h4>downlaod my resume in "PDF" format <i class="fa-regular fa-hand-point-up fa-rotate-180"></i></h4><a href="/BAPPA DAS CV.pdf" target="_blank"><button>Download CV</button></a></div>
+       <div class="downcv"><h4>downlaod my resume in "PDF" format <i class="fa-regular fa-hand-point-up fa-rotate-180"></i></h4><a href="/CV Bappa Das.pdf" target="_blank"><button>Download CV</button></a></div>
 
     </section>
 
